--- a/views/snippets/layout_modals.tt
+++ b/views/snippets/layout_modals.tt
@@ -115,7 +115,8 @@
                     <h4 class="modal-title" id="myModalLabel">Are you sure?</h4>
                 </div>
                 <div class="modal-body">
-                    <p>Are you sure you want to delete this item? Deleting an item will also delete all its associated data.</p>
+                    <h2 class="alert alert-danger" role="alert">Are you sure you want to delete the field?</h2>
+                    <p class="text-danger"><strong>Deleting this field will also delete all its associated data.</strong></p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
