Change helptext questionmark styling

--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1997,3 +1997,15 @@ small.search_term {
   text-align: center;
   line-height: 30px;
   margin: 0; }
+
+.helptext__questionmark {
+  cursor: pointer;
+  padding: 0 5px;
+  color: #ffffff;
+  background-color: #1460aa;
+  border-radius: 4px;
+  text-decoration: none; }
+  .helptext__questionmark:hover {
+    color: #ffffff;
+    background-color: #197ad8;
+    text-decoration: none; }
