--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -987,11 +987,11 @@ a.list-group-item-danger.active,a.list-group-item-danger.active:hover,a.list-gro
     outline: 2px solid #197E97;
 }
 
-#remember + label span::before {
+#remember + label span:before {
     content: "\e157";
 }
 
-#remember:checked + label span::before {
+#remember.remember--checked + label span:before {
     content: "\e067";
 }
 
