--- a/views/builder.tt
+++ b/views/builder.tt
@@ -78,7 +78,8 @@ $('#builder[% builder_id %]').queryBuilder({
             {type: 'less_or_equal',    accept_values: true,  apply_to: ['string', 'number', 'datetime']},
             {type: 'greater',          accept_values: true,  apply_to: ['string', 'number', 'datetime']},
             {type: 'greater_or_equal', accept_values: true,  apply_to: ['string', 'number', 'datetime']},
-            {type: 'contains',         accept_values: true,  apply_to: ['datetime']},
+            {type: 'contains',         accept_values: true,  apply_to: ['datetime', 'string']},
+            {type: 'not_contains',     accept_values: true,  apply_to: ['datetime', 'string']},
             {type: 'begins_with',      accept_values: true,  apply_to: ['string']},
             {type: 'not_begins_with',  accept_values: true,  apply_to: ['string']},
             {type: 'is_empty',         accept_values: false, apply_to: ['string', 'number', 'datetime']},
