--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -1452,6 +1452,7 @@ small.search_term {
     background-color: #1460aa;
     border-radius: 4px;
     text-decoration: none;
+    font-weight: bold;
 
     &:hover {
         color: #ffffff;
