--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1468,6 +1468,7 @@ small.search_term {
   overflow-wrap: break-word;
   padding: .5em;
   margin-top: 6px;
+  min-width: 200px;
   top: auto !important;
   /* Overwrite the custom inline style as applied by positionDisclosure(). */
   left: 8px !important;
@@ -1482,6 +1483,49 @@ small.search_term {
     top: -7px; }
   .data-table thead .popover:hover {
     display: block; }
+  .data-table thead .popover .column-filter__clear {
+    margin: 6px 0;
+    display: block; }
+  .data-table thead .popover .column-filter__search {
+    position: relative;
+    margin-bottom: 10px; }
+    .data-table thead .popover .column-filter__search:before {
+      position: absolute;
+      font-family: 'FontAwesome';
+      font-size: 12px;
+      top: 4px;
+      left: 5px;
+      content: "\f002";
+      color: #aaa; }
+  .data-table thead .popover .column-filter__search-input {
+    width: 100%;
+    height: 24px;
+    padding: 0 18px 0 20px; }
+    .data-table thead .popover .column-filter__search-input::-ms-clear {
+      display: none; }
+  .data-table thead .popover .column-filter__clear-search-input {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    text-decoration: none; }
+  .data-table thead .popover .column-filter__error {
+    padding: 5px;
+    margin: 0; }
+  .data-table thead .popover .column-filter__values {
+    list-style-type: none;
+    padding: 0;
+    max-height: 200px;
+    overflow-y: auto;
+    margin-bottom: 0; }
+  .data-table thead .popover .column-filter__value label {
+    font-weight: normal; }
+  .data-table thead .popover .column-filter__value input {
+    margin-right: .3em; }
+  .data-table thead .popover .column-filter__buttons {
+    text-align: right; }
+  .data-table thead .popover .column-filter__button {
+    margin: 0;
+    cursor: pointer; }
 
 .data-table thead .helptext {
   padding-top: 1em; }
