--- a/sass/_data-table.scss
+++ b/sass/_data-table.scss
@@ -46,6 +46,7 @@
     overflow-wrap: break-word;
     padding: .5em;
     margin-top: 6px;
+    min-width: 200px;
     top: auto !important; /* Overwrite the custom inline style as applied by positionDisclosure(). */
     left: 8px !important; /* Overwrite the custom inline style as applied by positionDisclosure(). */
 
@@ -61,6 +62,75 @@
 
     &:hover {
         display: block;
+    }
+
+    .column-filter__clear {
+        margin: 6px 0;
+        display: block;
+    }
+
+    .column-filter__search {
+        position: relative;
+        margin-bottom: 10px;
+
+        &:before {
+            position: absolute;
+            font-family: 'FontAwesome';
+            font-size: 12px;
+            top: 4px;
+            left: 5px;
+            content: "\f002";
+            color: #aaa;
+        }
+    }
+
+    .column-filter__search-input {
+        width: 100%;
+        height: 24px;
+        padding: 0 18px 0 20px;
+
+        &::-ms-clear {
+            display: none;
+        }
+    }
+
+    .column-filter__clear-search-input {
+        position: absolute;
+        right: 5px;
+        top: 5px;
+        text-decoration: none;
+    }
+
+    .column-filter__error {
+        padding: 5px;
+        margin: 0;
+    }
+
+    .column-filter__values {
+        list-style-type: none;
+        padding: 0;
+        max-height: 200px;
+        overflow-y: auto;
+        margin-bottom: 0;
+    }
+
+    .column-filter__value {
+        label {
+            font-weight: normal;
+        }
+
+        input {
+            margin-right: .3em;
+        }
+    }
+
+    .column-filter__buttons {
+        text-align: right;
+    }
+
+    .column-filter__button {
+        margin: 0;
+        cursor: pointer;
     }
 }
 
