622 Remove highlight from blank value in single select widget

--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1854,13 +1854,19 @@ small.search_term {
   padding: 0 .5em;
   white-space: nowrap; }
 
-.select-widget .current .none-selected {
-  display: none; }
+.select-widget .current li[data-list-item].current__blank {
+  font-style: italic;
+  background-color: initial;
+  border-radius: 0;
+  padding: 0; }
 
-.select-widget .current .current__blank,
+.select-widget .current .none-selected {
+  display: none;
+  font-style: italic;
+  padding: 0 .5em; }
+
 .select-widget .current.empty .none-selected {
-  display: inline;
-  font-style: italic; }
+  display: inline-block; }
 
 .select-widget .current {
   max-width: 100%;
