--- a/views/record_body.tt
+++ b/views/record_body.tt
@@ -1,9 +1,12 @@
+[% IF record.user_can_edit AND NOT record.deleted %]
+    <div class="btn-group">
+        [% PROCESS snippets/record_edit.tt %]
+    </div>
+<p></p>
+[% END %]
+
 [% PROCESS snippets/datum.tt %]
 [% PROCESS snippets/rag_legend.tt IF has_rag_column %]
-
-[% IF with_edit %]
-    <p><a href="/edit/[% record.current_id %]">Edit record</a></p>
-[% END %]
 
 <table class="table table-striped">
     <tr>
