Add HTML part to password emails and allow configuration

--- a/views/system.tt
+++ b/views/system.tt
@@ -3,6 +3,20 @@
     <div class="col-md-12">
         <form role="form" method="post">
             <input type="hidden" name="csrf_token" value="[% csrf_token %]">
+            <h3>Welcome emails</h3>
+            <div class="form-group">
+                <label for="name">System name:</label>
+                <input type="text" name="name" id="name" class="form-control" value="[% instance.name | html %]">
+            </div>
+            <div class="form-group">
+                <label for="email_welcome_subject">Welcome email subject:</label>
+                <input type="text" name="email_welcome_subject" id="email_welcome_subject" class="form-control" value="[% instance.email_welcome_subject | html %]">
+            </div>
+            <div class="form-group">
+                <label for="email_welcome_text">Welcome email text:</label>
+                <textarea class="form-control" name="email_welcome_text" id="email_welcome_text" rows="5">[% instance.email_welcome_text | html %]</textarea>
+            </div>
+            <h3>Homepage</h3>
             <p class="lead">
                 Customise the main homepage your users see when they login. Each
                 table also has its own homepage that can be configured
